# bfc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  OCI_SUPPORT.md  PR_DESCRIPTION.md  README.md  bfc.pc.in  cmd_extract.c
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  README.md  benchmark_all.c  benchmark_common.h  benchmark_compress.c  benchmark_crc32c.c  benchmark_encrypt.c  benchmark_reader.c  benchmark_writer.c
docs/: format.md
examples/: CMakeLists.txt  COMPILATION.md  README.md  create_example.c  encrypt_example.c  extract_example.c  oci_example.c  read_example.c
include/: bfc.h  bfc_oci.h
src/: bfc_oci.c
src/cli/: CMakeLists.txt  cli.h  cli_util.c  cli_win32_compat.h  cmd_create.c  cmd_exec.c  cmd_extract.c  cmd_info.c  cmd_list.c  cmd_verify.c  main.c
src/lib/: CMakeLists.txt  bfc_compress.c  bfc_compress.h  bfc_crc32c.c  bfc_crc32c.h  bfc_encrypt.c  bfc_encrypt.h  bfc_format.c  bfc_format.h  bfc_iter.c  bfc_os.c  bfc_os.h  bfc_reader.c  bfc_util.c  bfc_util.h  bfc_win32_compat.h  bfc_writer.c
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_compress.c  test_crc32c.c  test_encrypt.c  test_encrypt_integration.c  test_format.c  test_main.c  test_oci.c  test_os.c  test_path.c  test_reader.c  test_util.c  test_writer.c
